--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,9 @@
-/*# sourceMappingURL=styles.css.map */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Barlow Semi Condensed";
+}/*# sourceMappingURL=styles.css.map */
