Commented out the footer temporarily to better visualize the flow of elements in the webpage. Furthermore, added css styling to visualize the gaps between each row and the margin from the edges of the webpage. Lastly, adjusted the font-size of the h1 elements so that they aren't too large.

--- a/styles.css
+++ b/styles.css
@@ -6,4 +6,18 @@
 
 body {
   font-family: "Barlow Semi Condensed";
+}
+
+.parent {
+  margin: 2rem;
+  display: grid;
+  grid-template-columns: auto;
+  grid-row-gap: 1rem;
+  background-color: none;
+}
+.parent section {
+  border-style: solid;
+}
+.parent section h1 {
+  font-size: 1rem;
 }/*# sourceMappingURL=styles.css.map */
