--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,12 @@ body {
 }
 .parent section {
   border-style: solid;
+  padding: 2rem;
+}
+.parent section .header {
+  margin-bottom: 1rem;
 }
 .parent section h1 {
   font-size: 1rem;
+  margin-bottom: 1rem;
 }/*# sourceMappingURL=styles.css.map */
