--- a/styles.scss
+++ b/styles.scss
@@ -2,19 +2,25 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
+    p {
+        font-size: 0.813rem;
+    }
 }
 body {
     font-family: "Barlow Semi Condensed";
+    background-color: hsl(0, 0%, 81%);
 }
 .parent {
     margin: 2rem;
     display: grid;
     grid-template-columns: auto;
-    grid-row-gap: 1rem;
+    grid-row-gap: 2rem;
     background-color: none;
 
     section {
-        border-style: solid;
+        border-style: none;
+        border-radius: .5rem;
         padding: 2rem;
 
         .header {
@@ -22,7 +28,23 @@ body {
         }
         h1 {
             font-size: 1rem;
+            font-weight: 600;
             margin-bottom: 1rem;
         }
+    }
+    .box1 {
+            background-color: hsl(263, 55%, 52%);
+    }
+    .box2 {
+        background-color: hsl(224, 10%, 45%);
+    }
+    .box3 {
+        background-color: hsl(0, 0%, 100%);
+    }
+    .box4 {
+        background-color: hsl(219, 29%, 14%);
+    }
+    .box5 {
+        background-color: hsl(0, 0%, 100%);
     }
 }
