--- a/styles.css
+++ b/styles.css
@@ -35,8 +35,14 @@ body {
 .parent .box1 {
   background-color: hsl(263, 55%, 52%);
 }
+.parent .box1 h1, .parent .box1 p {
+  color: hsl(214, 17%, 92%);
+}
 .parent .box2 {
-  background-color: hsl(224, 10%, 45%);
+  background-color: hsl(217, 19%, 35%);
+}
+.parent .box2 h1, .parent .box2 p {
+  color: hsl(214, 17%, 92%);
 }
 .parent .box3 {
   background-color: hsl(0, 0%, 100%);
