Added an id class to add a form of indentification for the second 'p' element within the header. Then adjusted the text-color of the id class for .box1 and .box2.

--- a/styles.scss
+++ b/styles.scss
@@ -38,12 +38,18 @@ body {
             h1, p {
                 color: hsl(214, 17%, 92%);
             }
+            .id {
+                color: hsl(0, 0%, 81%);
+            }
     }
     .box2 {
         background-color: hsl(217, 19%, 35%);
 
         h1, p {
                 color: hsl(214, 17%, 92%);
+        }
+        .id {
+                color: hsl(0, 0%, 81%);
         }
     }
     .box3 {
