--- a/styles.css
+++ b/styles.css
@@ -38,11 +38,17 @@ body {
 .parent .box1 h1, .parent .box1 p {
   color: hsl(214, 17%, 92%);
 }
+.parent .box1 .id {
+  color: hsl(0, 0%, 81%);
+}
 .parent .box2 {
   background-color: hsl(217, 19%, 35%);
 }
 .parent .box2 h1, .parent .box2 p {
   color: hsl(214, 17%, 92%);
+}
+.parent .box2 .id {
+  color: hsl(0, 0%, 81%);
 }
 .parent .box3 {
   background-color: hsl(0, 0%, 100%);
