Wrapped the name and id within .box1 in a new container titled 'header-information'. Adjusted the layout with the newly added image by applying a flex-box and allows a default flex-direction (row). Adjusted the size of the image and made its border-radius 50%, so that it appeared as a circle. Lastly, adjusted the 'margin-right' of the img element, so there is a gap between it and the header-information.

--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,17 @@ body {
   padding: 2rem;
 }
 .parent section .header {
+  display: flex;
+  align-items: center;
   margin-bottom: 1rem;
+}
+.parent section .header img {
+  margin-right: 1rem;
+  border-radius: 50%;
+  width: 2rem;
+}
+.parent section .header .header-information .name {
+  font-weight: 500;
 }
 .parent section h1 {
   font-size: 1rem;
