--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,11 @@ body {
 .parent .box1 .id {
   color: hsl(0, 0%, 81%);
 }
+.parent .box1 img {
+  border-style: solid;
+  border-width: 0.1rem;
+  border-color: hsl(264, 82%, 80%);
+}
 .parent .box2 {
   background-color: hsl(217, 19%, 35%);
 }
@@ -65,6 +70,11 @@ body {
 }
 .parent .box4 {
   background-color: hsl(219, 29%, 14%);
+}
+.parent .box4 img {
+  border-style: solid;
+  border-width: 0.1rem;
+  border-color: hsl(263, 55%, 52%);
 }
 .parent .box5 {
   background-color: hsl(0, 0%, 100%);
