--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,7 @@ body {
 }
 .parent .box1 {
   background-color: hsl(263, 55%, 52%);
+  max-width: 28rem;
 }
 .parent .box1 h1, .parent .box1 p {
   color: hsl(214, 17%, 92%);
@@ -58,6 +59,7 @@ body {
 }
 .parent .box2 {
   background-color: hsl(217, 19%, 35%);
+  max-width: 19.458rem;
 }
 .parent .box2 h1, .parent .box2 p {
   color: hsl(214, 17%, 92%);
@@ -67,12 +69,14 @@ body {
 }
 .parent .box3 {
   background-color: hsl(0, 0%, 100%);
+  max-width: 19.458rem;
 }
 .parent .box3 h1, .parent .box3 p, .parent .box3 .id {
   color: hsl(224, 10%, 45%);
 }
 .parent .box4 {
   background-color: hsl(219, 29%, 14%);
+  max-width: 28rem;
 }
 .parent .box4 img {
   border-style: solid;
