--- a/styles.scss
+++ b/styles.scss
@@ -48,6 +48,7 @@ body {
     }
     .box1 {
         background-color: hsl(263, 55%, 52%);
+        max-width: 28rem;
 
         h1, p {
             color: hsl(214, 17%, 92%);
@@ -63,6 +64,7 @@ body {
     }
     .box2 {
         background-color: hsl(217, 19%, 35%);
+        max-width: 19.458rem;
 
         h1, p {
             color: hsl(214, 17%, 92%);
@@ -73,6 +75,7 @@ body {
     }
     .box3 {
         background-color: hsl(0, 0%, 100%);
+        max-width: 19.458rem;
 
         h1, p, .id {
             color: hsl(224, 10%, 45%);
@@ -80,6 +83,7 @@ body {
     }
     .box4 {
         background-color: hsl(219, 29%, 14%);
+        max-width: 28rem;
 
         img {
             border-style: solid;
