--- a/styles.scss
+++ b/styles.scss
@@ -8,8 +8,12 @@
     }
 }
 body {
+    height: 100vh;
     font-family: "Barlow Semi Condensed";
     background-color: hsl(0, 0%, 81%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .parent {
     margin: 2rem;
@@ -64,7 +68,7 @@ body {
     }
     .box2 {
         background-color: hsl(217, 19%, 35%);
-        max-width: 15rem;
+        max-width: 13.7rem;
 
         h1, p {
             color: hsl(214, 17%, 92%);
@@ -75,7 +79,7 @@ body {
     }
     .box3 {
         background-color: hsl(0, 0%, 100%);
-        max-width: 15rem;
+        max-width: 13.7rem;
 
         h1, p, .id {
             color: hsl(224, 10%, 45%);
@@ -103,5 +107,26 @@ body {
     }
     .id {
         color: hsl(224, 10%, 45%);
+    }
+}
+@media (min-width: 87.5rem) {
+    .parent {
+        display: flex;
+
+        .special-parent-container {
+            display: flex;
+            flex-direction: column;
+
+            .special-child-container-top {
+                display: flex;
+            }
+            .special-child-container-bottom {
+                display: flex;
+            }
+        }
+
+        .box1, .box2, .box3, .box4, .box5 {
+            margin: 1rem;
+        }
     }
 }
