Made a temporary hot-fix to the body CSS selector that ensures the content remains centered in both a mobile-layout and a desktop-layout.

--- a/styles.scss
+++ b/styles.scss
@@ -115,6 +115,9 @@ body {
     }
 }
 @media (min-width: 87.5rem) {
+    body {
+        height: 100vh;
+    }
     .parent {
         display: flex;
 
