--- a/styles.scss
+++ b/styles.scss
@@ -145,5 +145,10 @@ body {
         .box2, .box3 {
             max-width: 13.7rem;
         }
+        .box1 {
+            background-image: url("images/bg-pattern-quotation.svg");
+            background-repeat: no-repeat;
+            background-position: 80% 0%;
+        }
     }
 }
