--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
 
 body {
   height: 100%;
-  font-family: "Barlow Semi Condensed";
+  font-family: "Barlow Semi Condensed", sans-serif;
   background-color: hsl(0, 0%, 81%);
   display: flex;
   justify-content: center;
@@ -20,7 +20,6 @@ body {
   margin: 2rem;
   display: grid;
   grid-template-columns: auto;
-  background-color: none;
 }
 .parent section {
   border-style: none;
